--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "file-extension": "^3.1.2",
     "hash-file": "^3.0.0",
+    "lodash": "^4.17.4",
     "walk": "^2.3.9"
   }
 }
