--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^2.11.0",
     "file-extension": "^3.1.2",
     "hash-file": "^3.0.0",
     "lodash": "^4.17.4",
