--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Joel Lim",
   "license": "ISC",
   "dependencies": {
     "commander": "^2.11.0",
