--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "file-extension": "^3.1.2",
     "hash-file": "^3.0.0",
     "lodash": "^4.17.4",
+    "resolve-path": "^1.3.3",
     "walk": "^2.3.9"
   }
 }
