--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "duplicate-files",
+  "name": "duplicate-files-fast",
   "version": "1.0.0",
   "description": "",
   "main": "duplicate-files.js",
