--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "duplicate-files": "./index.js"
+    "duplicate-files-fast": "./index.js"
   },
   "author": "Joel Lim",
   "license": "ISC",
@@ -18,6 +18,9 @@
     "lodash": "^4.17.4",
     "walk": "^2.3.9"
   },
+  "bundledDependencies": [
+    "walk"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/aljorhythm/duplicate-files/"
