--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "duplicate-files-fast",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "main": "duplicate-files.js",
+  "keywords": ["duplicate", "duplicates", "fast", "hash"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
